# research-we-kzg

./: .gitignore  README.md
knowledge-enc-plonk/: Cargo.toml
knowledge-enc-plonk/benches/: plonk.rs
knowledge-enc-plonk/plonk-core/: Cargo.toml
kzg-enc/: Cargo.toml
kzg-enc/src/: kem.rs  lib.rs
laconic-ot/: Cargo.toml
laconic-ot/benches/: laconic_ot.rs
laconic-ot/src/: kzg.rs  kzg_fk_open.rs  kzg_types.rs  kzg_utils.rs  laconic_ot.rs  lib.rs
plonk/benches/: plonk.rs
plonk/examples/: example_poly.rs
plonk/plonk-core/src/: circuit.rs  commitment.rs
