[package]
name = "kzg-enc"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = "0.3"
ark-sponge = "0.3"
ark-std = "0.3"
ark-bls12-377 = "0.3"
ark-bls12-381 = "0.3"
ark-ec = "0.3"
ark-poly = "0.3"
ark-poly-commit = "0.3"
ark-serialize = { version = "0.3", features = ["derive"] }
rand_core = {version = "0.6", default-features=false, features = ["getrandom"] }
blake2 = "0.10"