[package]
name = "laconic-ot"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-poly-commit = "0.4.0"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
rand = "0.8.5"
blake3 = "1.5"

[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name = "laconic_ot"
harness = false

[features]
asm = [ "ark-ff/asm" ]
parallel = [
    "ark-std/parallel",
    "ark-ff/parallel",
    "ark-poly/parallel"
    ]
print-trace = [
    "ark-std/print-trace"
]